skeplib/tests/fixtures/resolver/invalid/cycle_three/c.sk
import a;

fn fc() -> Int {
  return 1;
}
